--- a/catalog.pug
+++ b/catalog.pug
@@ -8,7 +8,7 @@ html(lang="ru")
   body.page
     header.page-header
       .top-row
-        .container
+        .container.catalog
           .logo-top
             a(href="index.html")
               img(src="img/logo-technomart.svg" alt="logo")
@@ -19,12 +19,12 @@ html(lang="ru")
                 svg(xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17")
                   path(d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z")
           .bookmarks
-            a.bookmark-icon(href="") закладки:
+            a.bookmark-icon(href="") Закладки:
             span 0
           .cart
-            a.cart-icon(href="") корзина:
+            a.cart-icon(href="") Корзина:
             span 10
-          a.order(href="") оформить заказ
+          a.order(href="") Оформить заказ
       .container
         .middle-row
           .slogan
@@ -38,7 +38,7 @@ html(lang="ru")
           .authorization
             .user-login
               p.user
-                a.customer Равшан Джамшутович
+                a.customer(href="") Равшан Джамшутович
                 span
                   svg(xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18")
                     path(d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z")
@@ -246,15 +246,15 @@ html(lang="ru")
             img(src="img/logo-technomart.svg", alt="logo")
           ul.footer-nav
             li.footer-nav-item
-              a(href="") Компания
+              a.footer-nav-link(href="") Компания
             li.footer-nav-item
-              a(href="") Новости
+              a.footer-nav-link(href="") Новости
             li.footer-nav-item
-              a(href="catalog.html") Каталог
+              a.footer-nav-link(href="catalog.html") Каталог
             li.footer-nav-item
-              a(href="") Доставка
+              a.footer-nav-link(href="") Доставка
             li.footer-nav-item
-              a(href="") Контакты
+              a.footer-nav-link(href="") Контакты
       .footer-middle-row
         .container
           p.footer-address г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
