--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,6 @@ h3 {
 .top-row {
   background: #293449;
   font-size: 17px;
-  text-transform: capitalize;
 }
 .top-row .container {
   display: flex;
@@ -99,14 +98,16 @@ h3 {
   background-color: #ba2732;
 }
 .logo-top img {
-  padding: 11px 55px;
+  padding: 16px 55px 0;
   width: 220px;
 }
 .logo-top:after {
   content: '';
   position: absolute;
+  width: 100%;
+  height: 5px;
   top: 100%;
-  box-shadow: inset 0 -5px 0 rgba(0,0,0,0.24);
+  box-shadow: inset 0 -5px 0 #b52933;
 }
 a {
   color: #fff;
@@ -154,7 +155,7 @@ a {
 .search-icon:hover > svg {
   fill: #fff;
 }
-.search:focus-within > svg {
+.search input:focus + label > svg {
   fill: #ee3643;
 }
 .bookmarks,
@@ -175,6 +176,9 @@ a {
 .bookmarks span,
 .cart span {
   margin-left: 5px;
+}
+.catalog .cart {
+  background-color: #ee3643;
 }
 .bookmark-icon,
 .cart-icon,
@@ -230,7 +234,7 @@ span {
   background-color: #518534;
 }
 .middle-row {
-  padding: 41px 0 44px;
+  padding: 41px 0 39px;
 }
 .slogan,
 .address,
@@ -427,9 +431,6 @@ span {
   margin: 0;
 }
 .navigation-item {
-  display: flex;
-  justify-content: center;
-  flex-grow: 1;
   list-style: none;
 }
 .navigation-item:hover {
@@ -438,11 +439,15 @@ span {
 .navigation-item:active {
   background-color: #1d2739;
 }
+.navigation-item:first-child {
+  padding: 0 5px 0 19px;
+}
 .navigation-link {
-  padding: 22px 33px;
+  display: block;
+  padding: 20px 27px 22px 33px;
 }
 .categories {
-  margin-top: 59px;
+  margin-top: 60px;
 }
 .categories .container {
   display: flex;
@@ -451,7 +456,7 @@ span {
   position: relative;
 }
 .left-column .categories-item {
-  margin-right: 17px;
+  margin-right: 18px;
 }
 .left-column .flag-item {
   left: 239px;
@@ -526,16 +531,16 @@ span {
   font-size: 36px;
   line-height: 36px;
   text-transform: uppercase;
-  margin-bottom: 3px;
+  margin-bottom: 0;
 }
 .slider-item p {
   font-size: 18px;
   line-height: 24px;
   color: #fff;
-  margin-bottom: 126px;
+  margin-bottom: 134px;
 }
 .slider-item .btn {
-  padding: 14px 45px;
+  padding: 12px 47px;
 }
 .perf {
   height: 266px;
@@ -621,7 +626,7 @@ span {
   margin-right: 14px;
 }
 .content-title {
-  padding: 32px 0 34px 28px;
+  padding: 28px 0 34px 28px;
   background-color: #f2f6f8;
   color: #32425c;
   font-size: 30px;
@@ -631,7 +636,7 @@ span {
 }
 .catalog-filter {
   display: flex;
-  margin-top: 20px;
+  margin-top: 9px;
 }
 .aside {
   margin-right: 21px;
@@ -648,16 +653,16 @@ span {
   font-size: 13px;
   font-family: "PT-Sans";
   line-height: 18px;
-  margin-top: 55px;
+  margin-top: 41px;
   border: 1px solid #e5e5e5;
   background-color: #fff;
-  padding: 12px 39px;
+  padding: 13px 37px;
   text-transform: uppercase;
   cursor: pointer;
 }
 .filter {
-  padding: 14px 0 15px 19px;
-  margin: 0 0 20px;
+  padding: 15px 0 12px 19px;
+  margin: 0 0 5px;
   font-size: 13px;
   font-family: "PT-Sans";
   font-weight: normal;
@@ -666,17 +671,21 @@ span {
 }
 .choose-filter-range {
   border: none;
-  border-bottom: 1px solid;
+  border-bottom: 1px solid #e5e5e5;
   padding: 0;
+  margin: 0;
+}
+.choose-filter-range legend {
+  padding: 7px 0;
 }
 .range-filter {
-  margin: 21px 0 25px;
+  margin: 6px 0 25px;
   width: 220px;
   box-sizing: content-box;
 }
 .range-controls {
   position: relative;
-  margin-bottom: 9px;
+  margin-bottom: 8px;
   padding: 39px 20px;
   background-color: #f7f3ec;
   border-radius: 5px;
@@ -727,19 +736,28 @@ span {
 }
 .choose-filter-checkbox {
   border: none;
-  border-bottom: 1px solid;
+  border-bottom: 1px solid #e5e5e5;
   padding: 0;
-  margin-top: 25px;
+  margin: 12px 0;
+}
+.choose-filter-checkbox legend {
+  padding: 2px 0;
 }
 .choose-filter-radio {
   border: none;
   padding: 0;
-  margin-top: 25px;
+  margin: 13px 0;
+}
+.choose-filter-radio legend {
+  padding: 8px 0;
+}
+.choose-filter-radio .choose-filter-list {
+  margin: 6px 0 0;
 }
 .choose-filter-list {
   list-style: none;
   padding-left: 0;
-  margin: 20px 0 0;
+  margin: 12px 0 0;
 }
 .choose-filter-item label {
   position: relative;
@@ -761,10 +779,13 @@ span {
   left: 0;
   background-position: 0 0;
 }
+.filter-input-checkbox:checked+label:before {
+  display: none;
+}
 .filter-input-checkbox:checked+label:after {
   content: '';
   position: absolute;
-  width: 23px;
+  width: 27px;
   height: 23px;
   background: url("../img/checkbox-on.svg") no-repeat;
   top: 0;
@@ -795,7 +816,7 @@ span {
 }
 .sort {
   display: flex;
-  margin-bottom: 21px;
+  margin-bottom: 16px;
   background-color: #f7f3ec;
   font-size: 13px;
   font-family: "PT-Sans";
@@ -804,7 +825,7 @@ span {
 }
 .sort-to {
   margin: 0;
-  padding: 14px 139px 15px 18px;
+  padding: 16px 139px 12px 18px;
 }
 .sort-list {
   width: 355px;
@@ -857,15 +878,15 @@ span {
 }
 /* catalog styles end */
 .products {
-  margin-top: 33px;
+  margin-top: 30px;
 }
 .popular-header {
   background-color: #f9f5f0;
-  margin-bottom: 20px;
+  margin-bottom: 18px;
 }
 .popular-header .popular-title {
   margin: 0 auto;
-  padding: 33px 330px 0 28px;
+  padding: 35px 330px 0 28px;
   color: #32425c;
   font-size: 30px;
   font-weight: normal;
@@ -875,15 +896,15 @@ span {
   vertical-align: top;
 }
 .popular-header .btn {
-  margin: 25px 24px 26px 41px;
-  padding: 12px 55px;
+  margin: 29px 24px 26px 41px;
+  padding: 15px 55px 11px;
   display: inline-block;
 }
 .popular-header .second-title {
   padding: 33px 226px 30px 28px;
 }
 .popular-header .second-btn {
-  padding: 12px 69px;
+  padding: 10px 69px;
 }
 .goods,
 .catalog {
@@ -892,7 +913,7 @@ span {
 }
 .goods-item {
   width: 220px;
-  margin-bottom: 20px;
+  margin-bottom: 17px;
   display: flex;
   position: relative;
   flex-direction: column;
@@ -900,6 +921,7 @@ span {
   font-family: "PT-Sans";
   font-weight: bold;
   line-height: 18px;
+  border: 1px solid #e5e5e5;
 }
 .goods-item:hover {
   box-shadow: 0 10px 25px rgba(41,52,73,0.5);
@@ -912,8 +934,12 @@ span {
 .goods-item:hover > .hidden button {
   width: 135px;
   margin-bottom: 7px;
-  padding: 14px 0;
+  padding: 12px 0 9px 10px;
   text-align: center;
+}
+.goods-item img {
+  width: 217px;
+  height: 170px;
 }
 .goods-item .title,
 .goods-item .old-price,
@@ -925,18 +951,19 @@ span {
   font-size: 18px;
   line-height: 20px;
   text-align: center;
-  padding: 12px 31px 18px;
+  padding: 9px 30px 7px;
 }
 .goods-item .old-price {
   color: #a9a9a9;
   text-transform: uppercase;
+  margin: 1px auto;
 }
 .goods-item .price {
   color: #fff;
   text-transform: uppercase;
   background: url("../img/btn_copy_14.svg") no-repeat;
-  padding: 11px 40px 13px 36px;
-  margin: 13px 36px 21px 43px;
+  padding: 11px 38px 13px 36px;
+  margin: 13px 36px 16px 43px;
 }
 .goods-item:nth-child(4) .price,
 .goods-item:nth-child(7) .price,
@@ -951,9 +978,9 @@ span {
   margin-left: 19px;
 }
 .hidden {
-  width: 220px;
+  width: 217px;
   position: absolute;
-  padding: 44px 41px 31px;
+  padding: 44px 41px 20px;
   display: none;
   font-size: 14px;
   font-family: "Cuprum";
@@ -989,8 +1016,8 @@ span {
 .hidden .buy:before {
   content: '';
   position: absolute;
-  top: 14px;
-  left: 13px;
+  top: 10px;
+  left: 15px;
   width: 15px;
   height: 15px;
   background: url("../img/icon-cart.svg") no-repeat;
@@ -1006,7 +1033,7 @@ span {
   position: absolute;
   width: 60px;
   height: 59px;
-  left: 160px;
+  left: 159px;
   z-index: 1;
 }
 .manufacturers {
@@ -1017,6 +1044,8 @@ span {
 .manufacturers-item {
   width: 220px;
   list-style: none;
+  border: 1px solid #eaeaea;
+  margin-bottom: 22px;
 }
 .manufacturers-item:hover {
   box-shadow: 0 10px 25px rgba(41,52,73,0.5);
@@ -1063,14 +1092,15 @@ span {
   font-size: 14px;
   font-family: "PT-Sans";
   line-height: 24px;
+  margin-top: 57px;
 }
 .service-title {
   width: 554px;
-  padding-top: 68px;
+  padding-top: 67px;
   margin-bottom: 28px;
 }
 .service-title h3 {
-  margin-bottom: 35px;
+  margin-bottom: 25px;
   font-size: 30px;
   font-family: "Cuprum";
   font-weight: normal;
@@ -1078,8 +1108,9 @@ span {
   text-transform: uppercase;
 }
 .service-title p {
-  width: 448px;
+  width: 411px;
   margin: 0;
+  font-size: 13px;
 }
 .service-wrapper {
   display: flex;
@@ -1088,7 +1119,7 @@ span {
 .service-tab-nav {
   position: relative;
   padding: 0;
-  padding-top: 47px;
+  padding-top: 36px;
   list-style: none;
   margin: 0 80px 52px 0;
   width: 240px;
@@ -1107,7 +1138,7 @@ span {
   background-color: #fff;
 }
 .service-tab-nav a {
-  padding: 21px 0 20px 22px;
+  padding: 21px 0 14px 22px;
 }
 .service-tab-nav a:active {
   color: #32425c;
@@ -1135,15 +1166,14 @@ span {
   position: absolute;
   content: '';
   display: block;
-  top: 20px;
+  top: 0;
   right: 0;
   width: 10px;
   height: 279px;
-  opacity: 0.25;
-  background-color: rgba(255,255,255,0.3);
+  background-image: url("../img/Layer_118_copy.png");
 }
 .service-tab-content {
-  padding-top: 48px;
+  padding-top: 41px;
   width: 100%;
 }
 .service-tab-content h3 {
@@ -1152,12 +1182,12 @@ span {
   line-height: 36px;
   font-weight: normal;
   text-transform: uppercase;
-  margin-bottom: 33px;
+  margin-bottom: 23px;
 }
 .service-tab-item {
   display: none;
   width: 100%;
-  padding-bottom: 120px;
+  padding-bottom: 128px;
 }
 .active {
   display: block;
@@ -1179,7 +1209,7 @@ span {
 }
 .service-tab-delivery {
   background: url("../img/Layer_131.png") no-repeat;
-  background-position: top 21px right 1px;
+  background-position: top 23px right 1px;
 }
 .service-tab-guarantee {
   background: url("../img/Layer_130.png") no-repeat;
@@ -1193,24 +1223,24 @@ span {
   padding: 14px 44px;
 }
 .about {
-  margin: 82px 0 86px;
+  margin: 74px 0 85px;
 }
 .about h2 {
   font-size: 30px;
   line-height: 30px;
   font-weight: normal;
   text-transform: uppercase;
-  margin: 0 0 35px;
+  margin: 6px 0 27px;
 }
 .about .text {
   font-size: 13px;
   font-family: "PT-Sans";
   line-height: 24px;
-  margin-bottom: 35px;
+  margin-bottom: 24px;
   width: 519px;
 }
 .about .text:nth-child(3) {
-  margin: 0 0 28px;
+  margin: 0 0 25px;
   width: 400px;
 }
 .about .container {
@@ -1224,7 +1254,7 @@ span {
 }
 .company .btn {
   padding: 14px 40px 12px;
-  margin-top: 13px;
+  margin-top: 20px;
   width: 220px;
 }
 .partners {
@@ -1255,7 +1285,7 @@ span {
 }
 .contacts .text {
   width: 180px;
-  margin: 0 0 35px;
+  margin: 0 0 28px;
 }
 .contacts .btn {
   padding: 14px 59px 12px 63px;
@@ -1271,6 +1301,7 @@ span {
   font-family: "PT-Sans";
   line-height: 9px;
   color: #fff;
+  margin: 22px 0 45px;
 }
 .pager-list {
   display: flex;
@@ -1280,21 +1311,22 @@ span {
 }
 .pager-item {
   margin-right: 8px;
+}
+.pager-item .pager-item-link {
   border: 1px solid #e5e5e5;
   background-color: #fff;
   display: flex;
-}
-.pager-item .pager-item-link {
   padding: 14px 15px;
   font-size: 13px;
   font-family: "PT-Sans";
   color: #000;
   text-transform: uppercase;
+  border-radius: 2px;
 }
-.pager-item:hover {
+.pager-item .pager-item-link:hover {
   border: 1px solid #bdc6ca;
 }
-.pager-item:active {
+.pager-item .pager-item-link:active {
   border: 1px solid #ee3643;
 }
 .pager-item .current {
@@ -1305,7 +1337,7 @@ span {
   padding: 14px 32px;
 }
 .about-puncher {
-  padding: 67px 0 73px;
+  padding: 67px 0;
   background-color: #f2f6f8;
 }
 .about-puncher h3 {
@@ -1313,7 +1345,7 @@ span {
   line-height: 30px;
   font-weight: normal;
   text-transform: uppercase;
-  margin-bottom: 37px;
+  margin-bottom: 26px;
 }
 .about-puncher p {
   font-size: 13px;
@@ -1334,7 +1366,8 @@ span {
   width: 220px;
   padding: 20px 41px 25px;
   margin-right: 164px;
-  display: inline-flex;
+  display: inline-block;
+  vertical-align: top;
 }
 .footer-nav {
   list-style: none;
@@ -1342,17 +1375,17 @@ span {
   display: inline-flex;
   margin: 0;
 }
-.footer-nav a {
+.footer-nav-link {
   color: #f1f5f7;
 }
-.footer-nav a:hover {
+.footer-nav-link:hover {
   text-decoration: underline;
 }
-.footer-nav a:active {
+.footer-nav-link:active {
   opacity: 0.5;
 }
 .footer-nav-item {
-  padding: 25px 30px 13px;
+  padding: 38px 30px 0;
 }
 .footer-nav-item:first-child {
   padding-left: 0;
@@ -1362,7 +1395,7 @@ span {
 }
 .footer-middle-row {
   color: #f3f7f9;
-  margin: 32px 0 53px;
+  margin: 22px 24px 49px 22px;
 }
 .footer-address {
   display: inline-flex;
@@ -1406,6 +1439,7 @@ span {
 }
 .footer-bottom-row a {
   color: #ffd180;
+  margin-top: -6px;
 }
 .footer-bottom-row a:hover {
   text-decoration: underline;
@@ -1425,14 +1459,15 @@ span {
 }
 .footer-rights {
   width: 228px;
-  margin-right: 157px;
+  margin: 0 158px 0 1px;
+  line-height: 18px;
 }
 .socials {
-  margin-right: 116px;
+  margin-right: 111px;
 }
 .feedback {
   width: 135px;
-  margin-right: 53px;
+  margin-right: 49px;
 }
 .developed {
   width: 96px;
@@ -1471,6 +1506,7 @@ span {
 }
 /* send form start */
 .popup-write-us {
+  display: none;
   width: 620px;
   border-top: 7px solid #ee3643;
   box-shadow: 0 20px 40px rgba(0,0,0,0.75);
@@ -1543,6 +1579,7 @@ span {
 /* send form end */
 /* cart popup start */
 .cart-popup {
+  display: none;
   width: 620px;
   border-top: 7px solid #ee3643;
   box-shadow: 0 20px 40px rgba(41,52,73,0.5);
