--- a/index.pug
+++ b/index.pug
@@ -19,12 +19,12 @@ html(lang="ru")
                 svg(xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17")
                   path(d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z")
           .bookmarks
-            a.bookmark-icon(href="") закладки:
+            a.bookmark-icon(href="") Закладки:
             span 0
           .cart
-            a.cart-icon(href="") корзина:
+            a.cart-icon(href="") Корзина:
             span 0
-          a.order(href="") оформить заказ
+          a.order(href="") Оформить заказ
       .container
         .middle-row
           .slogan
@@ -222,15 +222,15 @@ html(lang="ru")
             img(src="img/logo-technomart.svg", alt="logo")
           ul.footer-nav
             li.footer-nav-item
-              a(href="") Компания
+              a.footer-nav-link(href="") Компания
             li.footer-nav-item
-              a(href="") Новости
+              a.footer-nav-link(href="") Новости
             li.footer-nav-item
-              a(href="catalog.html") Каталог
+              a.footer-nav-link(href="catalog.html") Каталог
             li.footer-nav-item
-              a(href="") Доставка
+              a.footer-nav-link(href="") Доставка
             li.footer-nav-item
-              a(href="") Контакты
+              a.footer-nav-link(href="") Контакты
       .footer-middle-row
         .container
           p.footer-address г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
